--- a/index.html
+++ b/index.html
@@ -5,40 +5,99 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin-Landing-page</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
-      <p>Header logo</p>
-      <ul>
-        <li><a href="link one"></a></li>
-        <li><a href="link two"></a></li>
-        <li><a href="link three"></a></li>
-      </ul>
+      <nav>
+        <div class="logo">
+          <p>Header logo</p>
+        </div>
+        <ul class="nav-links">
+          <li><a href="link one">header link one</a></li>
+          <li><a href="link two">header link two</a></li>
+          <li><a href="link three">header link three</a></li>
+        </ul>
+      </nav>
     </header>
-    <h1>THIS WEBSITE IS AWESOME</h1>
-    <p>
-      This website has some subtext that goes here under the main title. It`s a
-      smaller font and the color is lower contrast
-    </p>
-    <button><a href="Sign-up">Sign up</a></button>
+    <div class="hero">
+      <div class="hero-text">
+        <h1>THIS WEBSITE IS AWESOME</h1>
+        <br />
+        <p>
+          This website has some subtext that goes here under the main title.
+          It`s a smaller font and the color is lower contrast
+        </p>
+        <br />
+        <button><a href="Sign-up">Sign up</a></button>
+      </div>
+      <figure class="image1">
+        <img
+          src="/images/hoover-tung-4QcH0MBnAIM-unsplash.jpg"
+          alt="big city sky light in black and blue"
+        />
+      </figure>
+    </div>
+
     <h2>Some random information.</h2>
-    <img src="" alt="" />
-    <p></p>
-    <img src="" alt="" />
-    <p></p>
-    <img src="" alt="" />
-    <p></p>
-    <img src="" alt="" />
-    <p></p>
-    <p>
-      This is an inspiring quote, or a testimonial from a customer. Maybe it`s
-      just filling up sapce, or maybe people will actually read it. Who knows?
-      All i know is that it looks nice.
-    </p>
-    <p>-Thor, God of Thunder</p>
-    <h3>Call to action! It`s time!</h3>
-    <p>Sign up for our product by clicking that button right over there!</p>
-    <button><a href="Sign-up"></a>Sign up</button>
+    <div class="content">
+      <figure class="thumbnail_image">
+        <img
+          src="/images/the-dk-photography-KSgK6Only9I-unsplash.jpg"
+          alt="dark hallway with blue industrial light fixes"
+        />
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </figure>
+      <figure class="thumbnail_image">
+        <img
+          src="/images/dawid-sokolowski-mufeb7CMUxo-unsplash.jpg"
+          alt=" blue squared architecture "
+        />
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </figure>
+      <figure class="thumbnail_image">
+        <img
+          src="/images/chandler-cruttenden-HWMDV4WO5OI-unsplash.jpg"
+          alt="blue light chain in the dark"
+        />
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </figure>
+      <figure class="thumbnail_image">
+        <img
+          src="/images/max-kleinen-fN3n9G2fN_Q-unsplash.jpg"
+          alt="blue liquid in dark atmosphere"
+        />
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </figure>
+    </div>
+    <div class="quote">
+      <p>
+        This is an inspiring quote, or a testimonial from a customer. Maybe it`s
+        just filling up space, or maybe people will actually read it. Who knows?
+        All i know is that it looks nice.
+      </p>
+      <div class="origin">
+        <p>-Thor, God of Thunder</p>
+      </div>
+    </div>
+    <div class="action">
+      <div class="action-field">
+        <div class="time">
+          <h3>Call to action! It`s time!</h3>
+
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <div class="call_to_action">
+          <button><a href="Sign-up"></a>Sign up</button>
+        </div>
+      </div>
+    </div>
     <footer>
       <p>Copyright © The Odin Project 2023</p>
     </footer>
